--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.30.0
 scipy==1.17.0
-shiny==0.0.0
+shiny>=1.0.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8.3
